# neahttadigisanit

./: .gitignore  README.md
neahtta/: .gitignore  Dockerfile  README.md  SAPIR_TODO  TODOs  change_corpora_url_in_configs.py  changes_after_restructuring.txt  maintainer_motd  package.json  pyproject.toml
neahtta/e2e/: playwright.saan.config.js
neahtta/e2e/saan/: vulged_paradigm.spec.js
neahtta/infra/: PROJ.conf  README.md  nds-PROJ.init.d-script  nds.service
neahtta/neahtta/: application.py  bookmarklet_code.py  bower.json  commit-msg.txt  config.py  entry_template_filters.py  entry_templates.py  fab_commands.py  filters.py  nds_commands.py  neahtta.py  package.json  paradigm_layouts.py  paradigms.py  requirements.txt  requirements_dev.txt  test_paradigm_layouts.py
neahtta/neahtta/conf/: __init__.py  confdir.py
neahtta/neahtta/configs/: README.md  baakoeh.config.yaml  baakoeh.config.yaml.in  bahkogirrje.config.yaml.in  config_schema.json  itwewina.config.yaml.in.old  kyv.config.yaml.in  language_names.yaml  muter.config.yaml.in  ndstesting.config.yaml.in.old  saan.config.yaml.in  saanih.config.yaml.in  sample.config.yaml.in  sample.config.yaml.in.old  sanat.config.yaml.in  sanit.config.yaml.in  sanj.config.yaml.in  sonad.config.yaml.in  vada.config.yaml.in  valks.config.yaml.in
neahtta/neahtta/dicts/: build_langs.sh
neahtta/neahtta/i18n/: polib.py  utils.py
neahtta/neahtta/locale-data/: README.md
neahtta/neahtta/misc/: search_http_log_reader_hosts.sh
neahtta/neahtta/morpholex/: __init__.py  morpho_lexicon.py
neahtta/neahtta/morphology/: __init__.py  lookupserv.py  morphology.py  tests.py  utils.py
neahtta/neahtta/nds_lexicon/: __init__.py  custom_lookups.py  formatters.py  lexicon.py  lookups.py  new_trie.py  trie.py
neahtta/neahtta/templates/: add_to_homescreen.html  base.html  browse.html  config_doc.html  config_docs.html  default_detail_search_form.html  index.html  index_search_form.html  keyword_search_form.html  kildin_keyboards.html  left_dictionary_list.html  left_nav_grouped_language_pair_select.html  left_nav_language_pair_select_list.html  left_nav_search_variants.html  macros.html  mobile_nav_push_menu.html  more_dictionaries.html  privacy_notice.html  reader.html  reader_example.html  reader_ie8_notice.html  reader_test_page.html  reader_update.html  template_settings.html  tts_settings.html  word_detail_li.html
neahtta/neahtta/tests/: crk_lexicon.py  fin_lexicon.py  hdn_lexicon.py  itwewina.yaml  kpv_lexicon.py  lexicon.py  (+12 more)
neahtta/webdebug/: build.py  template.html
(+1114 files in other folders)
